chaptr iot corrections

--- a/Talk7/03_related_work/03-4_iot.tex
+++ b/Talk7/03_related_work/03-4_iot.tex
@@ -10,7 +10,7 @@ impacts everyday life with smart homes, vehicles and healthcare. This section ai
   \begin{center}
     \includegraphics[scale=0.6]{Talk7/img/iot/iot_statista}
   \end{center}
-  \caption{Iot market impact, Source: \protect\url{https://www.statista.com/statistics/580778/worldwide-internet-of-things-economic-impact-forecast/} }
+  \caption{Iot market impact, Source: \protect\url{https://www.statista.com/statistics/580778/worldwide-internet-of-things-economic-impact-forecast/}~\cite{StatistaIoT} }
   \label{fig:iot_market}
 \end{figure}
 
@@ -45,7 +45,7 @@ Khan et. al. in \cite{Khan2018} review and classify security issues for IoT. The
 
 
 Dorri et. al. in \cite{Dorri2017SmartHome} present a use case for blockchain in a smart home. In their use case, each smart home is equipped with an always online, high resource device, called the ``miner''. It is responsible for handling all communication within and external to the home.
-The miner mines a private and secure blockchain used for controlling and auditing communications. To address challenges of power consumption for the proof of work (POW), they propose a framework based on trust to limit energy consumption to make their solution more suitable in the context of IoT.
+The miner mines a private and secure blockchain used for controlling and auditing communications. To address challenges of power consumption for the Proof-of-Work (POW), they propose a framework based on trust to limit energy consumption to make their solution more suitable in the context of IoT.
 
 The design consists of three core components: the smart homes, a cloud storage, and an overlay.
 Smart homes build and overlay with the Service Provider (SP). Smart homes are clustered and, in each cluster, one home is selected as Cluster Head (CH).
