--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -767,7 +767,14 @@ year = {2017}
   url = {https://www.coindesk.com/understanding-dao-hack-journalists},
   year = {2016},
   urldate = {2019-05-16}
-  }
+}
+
+@misc{StatistaIoT,
+  author = {Statista},
+  title = {Forecast economic impact of the Internet of Things},
+  note = {\url{https://www.statista.com/statistics/580778/worldwide-internet-of-things-economic-impact-forecast/}, accessed on 2019-05-16},
+  url = {https://www.statista.com/statistics/580778/worldwide-internet-of-things-economic-impact-forecast/},
+}
 
 @article{Li2018,
   abstract = {With the development of Internet technology, the volume of data is increasing tremendously. To tackle with large-scale data, more and more applications choose to enlarge the storage capacity of users' terminals with the help of cloud platforms. Before storing data to an untrusted cloud server, some measures should be adopted to guarantee the data security. However, the communication overhead will increase dramatically when users transmit files encrypted by a traditional encryption scheme. In this paper, we address the above problems by proposing a blockchain-based security architecture for distributed cloud storage, where users can divide their own files into encrypted data chunks, and upload those data chunks randomly into the P2P network nodes that provide free storage capacity. We customize a genetic algorithm to solve the file block replica placement problem between multiple users and multiple data centers in the distributed cloud storage environment. Numerical results show that the proposed architecture outperforms the traditional cloud storage architectures in terms of file security and network transmission delay. On average, the file loss rate based on the simulation assumptions utilized in this paper is close to 0{\%} on our architecture while it's nearly 100{\%} and 71.66{\%} on the architecture with single data center and the distributed architecture using genetic algorithm. Besides, with proposed scheme, the transmission delay on the proposed architecture is reduced by 39.28{\%} and 76.47{\%} on average on the user's number and the number of file block replicas, respectively, in comparison to the architecture with single data center. Meanwhile, the transmission delay of file block replicas is also reduced by 41.36{\%} on average than that on the distributed architecture using genetic algorithm.},
