fix intro and refrences

--- a/Talk7/04_final_considerations/04_final_considerations.tex
+++ b/Talk7/04_final_considerations/04_final_considerations.tex
@@ -30,7 +30,7 @@ The question remains whether blockchains are really needed and if they really so
 As shown in this paper, there are various ways in which blockchain technology can enhance cybersecurity.
 But blockchains have their own limitations. They use a lot of power and don't scale well. This is a problem especially for IoT applications where devices are designed to use little power and have little storage. Therefore the blockchains are sometimes adapted to fit their use case better and for example use trust instead of proof of work.
 
-Before trying to apply blockchain technology to solve a problem, we think it is important to first reflect upon the question wether a blockchain is really needed as shown in the flowchart in Figure~\ref{blockchain_or_not}.
+Before trying to apply blockchain technology to solve a problem, we think it is important to first reflect upon the question wether a blockchain is really needed as shown in the flowchart in Figure~\ref{fig:Blockchain_or_not}.
 Fundamentally blockchains cannot solve problems of human nature. In e-voting, if the government itself is not trusted, how can one trust the blockchain set up by the government? Nevertheless, there is definitely a place for blockchain technology for helping with cybersecurity as this paper has shown by collecting examples thereof.
 
 
