--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -760,6 +760,14 @@ year = {2017}
   year = {2017}
 }
 
+@book{whitman2011principles,
+  title={Principles of information security},
+  author={Whitman, Michael E and Mattord, Herbert J},
+  year={2011},
+  publisher={Cengage Learning}
+}
+
+
 @misc{DoaAttack,
   author = {David Siegel},
   title = {Understanding The DAO Attack},
