--- a/Talk7/03_related_work/03-2_pki_ksi.tex
+++ b/Talk7/03_related_work/03-2_pki_ksi.tex
@@ -1,7 +1,7 @@
 \subsection{Public Key Infrastructure (PKI)}
 \label{subsec:03_pki}
 
-Public Key Cryptography serves as one of the cornerstones of modern communication systems. Entities can secure their communication asynchronously using a pair of keys (public and private). After the distribution of its public key, an entity can be contacted by anyone via securely encrypted channels.
+Public Key Cryptography serves as one of the cornerstones of modern communication systems and technologies, also including the Blockchain. Entities can secure their communication asynchronously using a pair of keys (public and private). After the distribution of its public key, an entity can be contacted by anyone via securely encrypted channels.
 
 What makes this type of cryptography so convenient is that its security does not depend on any shared hidden secret (e.g., a passphrase). An entity encrypts its message using the public key of its counterparty, after which only the supposed recipient can decrypt the message with its private key. While the public key and private key always belong to the same communication channel, it is practically not possible to infer the private key from the public key. This means that the public key can be distributed without considerations about the trustworthiness of potential recipients (e.g., publicly on online platforms) \cite{straub_tobias_usability_2006}.
 
@@ -14,11 +14,9 @@ Public Key Infrastructure (PKI) is the summary term for an infrastructure that e
 
 Traditional PKI systems are most visibly used for communication over the web. Before two entities (e.g., a server and a client) can securely communicate over HTTPS/TLS, the domain name of the server must have been validated and certified by a certificate authority (CA). A CA is an entity that has the authority over issuing certificates for a given PKI namespace (e.g., domain names or a subset thereof).
 
-A PKI certificate verifies that the given name-value (e.g., domain name and public key) binding is authentic and is itself signed with the key of a CA. The trustworthiness of a CA is signed by a higher-level CA, building a chain up to a root-level CA that ultimately needs to be trusted without verification. When establishing communication with a server over HTTPS, a client verifies the identity of the server according to its certificate, and client and server confidentially decide on a data encryption secret by employing asymmetric encryption. All further message and data exchanges are secured with symmetric encryption \cite{straub_tobias_usability_2006}.
+A PKI certificate verifies that the given name-value (e.g., domain name and public key) binding is authentic and is itself signed with the key of a CA. The trustworthiness of a CA is signed by a higher-level CA, building a chain up to a root-level CA that ultimately needs to be trusted without verification. When establishing communication with a server over HTTPS, a client verifies the identity of the server according to its certificate, and client and server confidentially decide on a data encryption secret by employing asymmetric encryption. All further message and data exchanges are secured with symmetric encryption \cite{straub_tobias_usability_2006}. The procedures of PKI management as employed in HTTPS/TLS, as well as many other systems and private infrastructures, are standardized by the IETF in the X.509 standard \cite{adams_internet_2015}.
 
-The procedures of PKI management as employed in HTTPS/TLS, as well as many other systems and private infrastructures, are standardized by the Internet Engineering Task Force (IETF) in the X.509 standard \cite{adams_internet_2015}.
-
-Contrary to the centralized approach, the Pretty Good Privacy (PGP) architecture is based on a decentralized web-of-trust where all participants manually define their trust anchors (i.e., which entities to trust as the anchor for a certificate chain) instead of relying on a predefined trust store as included in operating systems or browsers \cite{straub_tobias_usability_2006}. While PGP is in relatively broad use for secured email communication, this work focuses mainly on centralized infrastructures for their approachability with blockchain architectures.
+Contrary to the centralized approach, the Pretty Good Privacy (PGP) architecture is based on a decentralized web-of-trust where all participants manually define their trust anchors (i.e., which entities to trust as the anchor for a certificate chain) instead of relying on a predefined trust store as included in operating systems or browsers \cite{straub_tobias_usability_2006}. While PGP is in relatively broad use for secured email communication, this work focuses mainly on centralized infrastructures for their approachability with Blockchain architectures.
 
 
 \subsubsection{Threat Model for Public Key Infrastructures}
@@ -37,33 +35,33 @@ As centralization in PKI systems leads to a big attack surface, developing appro
 
 \paragraph{Namecoin}
 
-A foundational work that introduced the idea of applying blockchain to the decentralization of naming systems was initially created to rebuild the domain name system (DNS) such that it can work without centralized DNS servers. Much like central PKI entities, DNS servers can be exploited and, if hacked, can be a threat to large parts of the internet user base.
+A foundational work that introduced the idea of applying Blockchain to the decentralization of naming systems was initially created to rebuild the Domain Name System (DNS) such that it can work without centralized DNS servers. Much like central PKI entities, DNS servers can be exploited and, if hacked, can be a threat to large parts of the internet user base.
 
-The main idea of namecoin is to store all DNS-related naming information in a blockchain ledger that enforces state updates to occur via appended transactions. All entities in the network share a copy of this ledger and can independently lookup the records associated with a name. Records are owned, and can only be modified, by a given cryptographic identity \cite{noauthor_namecoin_nodate, ali_blockstack:_2016}.
+The main idea of Namecoin is to store all DNS-related naming information in a Blockchain ledger that enforces state updates to occur via appended transactions. All entities in the network share a copy of this ledger and can independently lookup the records associated with a name. Records are owned, and can only be modified, by a given cryptographic identity \cite{noauthor_namecoin_nodate, ali_blockstack:_2016}.
 
-While this approach to naming provides the benefit of decentralization, it comes with challenges regarding security, performance, and scalability. The namecoin blockchain is a fork of the bitcoin blockchain and shares most of its technicalities and limitations but progresses a separate ledger. This means that it has a separate and much smaller set of miners, making it very vulnerable to 51\% attacks (where an attacker controls a majority part of the computing power and can rewrite the chain) or DDoS. Even though namecoin implements merged-mining (i.e., it allows bitcoin miners to participate in namecoin mining), its computation is mainly concentrated on one big pool of miners with >50\% of the computational power \cite{noauthor_namecoin_nodate, ali_blockstack:_2016}.
+While this approach to naming provides the benefit of decentralization, it comes with challenges regarding security, performance, and scalability. The Namecoin Blockchain is a fork of the Bitcoin Blockchain and shares most of its technicalities and limitations but progresses a separate ledger. This means that it has a separate and much smaller set of miners, making it very vulnerable to 51\% attacks (where an attacker controls a majority part of the computing power and can rewrite the chain) or DDoS. Even though Namecoin implements merged-mining (i.e., it allows bitcoin miners to participate in Namecoin mining), its computation is mainly concentrated on one big pool of miners with >50\% of the computational power \cite{noauthor_namecoin_nodate, ali_blockstack:_2016}.
 
-In addition to the limitations on a security level, namecoin also struggles with regards to performance (e.g., transactions per second). As the block size in bitcoin and its forks (i.e., namecoin) is relatively small, there is a limited amount of data that can be stored in transactions and processed in a block, which severely limits the throughput of transactions and can lead to issues in a DNS use case.
+In addition to the limitations on a security level, Namecoin also struggles with regards to performance (e.g., transactions per second). As the block size in bitcoin and its forks (i.e., Namecoin) is relatively small, there is a limited amount of data that can be stored in transactions and processed in a block, which severely limits the throughput of transactions and can lead to issues in a DNS use case.
 
 \paragraph{Blockstack}
 
-The Blockstack system was initially based on the namecoin blockchain using a dedicated namespace. Using the initial system called Blockstack ID, users could link their username with their public key, as well as some additional data. To work around the issues of limited storage within a block, Blockstack ID would connect related key-value pairs using a linked list data structure mapped to the blockchain \cite{ali_blockstack:_2016}.
+The Blockstack system was initially based on the Namecoin Blockchain using a dedicated namespace. Using the initial system called Blockstack ID, users could link their username with their public key, as well as some additional data. To work around the issues of limited storage within a block, Blockstack ID would connect related key-value pairs using a linked list data structure mapped to the Blockchain \cite{ali_blockstack:_2016}.
 
-Mainly due to the security implications of namecoin also applying to Blockstack ID, its maintainers have intermittently developed a new approach that replaces Namecoin with the Bitcoin blockchain. Contrary to its predecessor, Blockstack does not store its data directly in the blockchain. Instead, the blockchain only stores hashes of the data, while the data itself is stored in external systems \cite{ali_blockstack:_2016}.
+Mainly due to the security implications of Namecoin also applying to Blockstack ID, its maintainers have intermittently developed a new approach that replaces Namecoin with the Bitcoin Blockchain. Contrary to its predecessor, Blockstack does not store its data directly in the Blockchain. Instead, the Blockchain only stores hashes of the data, while the data itself is stored in external systems \cite{ali_blockstack:_2016}.
 
-The Blockstack architecture introduces a novel approach that is called the virtualchain. The virtualchain is a logical structure built on top of a blockchain that processes transactions relevant to the Blockstack system and implements a state-machine over these transactions. When state updates occur, new transactions are encoded and written to the underlying blockchain (subject to consensus). The virtualchain is used to compute a global state of who owns what names and what is associated with these names. These components form the control plane of the Blockstack architecture \cite{ali_blockstack:_2016}.
+The Blockstack architecture introduces a novel approach that is called the virtualchain. The virtualchain is a logical structure built on top of a Blockchain that processes transactions relevant to the Blockstack system and implements a state-machine over these transactions. When state updates occur, new transactions are encoded and written to the underlying Blockchain (subject to consensus). The virtualchain is used to compute a global state of who owns what names and what is associated with these names. These components form the control plane of the Blockstack architecture \cite{ali_blockstack:_2016}.
 
-Instead of storing the production data in blockchain productions, Blockstack only appends hashes and pointers to the real data to the blockchain. The production data is managed by a separate data plane that consists of routing as well as actual persistence capabilities. Similar to the approach taken by traditional DNS, the routing layer is based on zone files that contain all routes/records for any given name. The actual persistence layer then stores whatever data is to be associated with a record in a database or another storage system \cite{ali_blockstack:_2016}.
+Instead of storing the production data in Blockchain productions, Blockstack only appends hashes and pointers to the real data to the Blockchain. The production data is managed by a separate data plane that consists of routing as well as actual persistence capabilities. Similar to the approach taken by traditional DNS, the routing layer is based on zone files that contain all routes/records for any given name. The actual persistence layer then stores whatever data is to be associated with a record in a database or another storage system \cite{ali_blockstack:_2016}.
 
-Separating the architecture into a control and data plane allows for efficient lookups of data against the data plane, while still allowing for verification of the data stored therein using the control plane. As a hash of the zone file is stored alongside its name in the blockchain, a low-level transaction with consensus is necessary to modify the zone file that is associated with a name. Furthermore, if hashes of record contents are put inside the zone file, these contents also become immutable without consensus \cite{ali_blockstack:_2016}.
+Separating the architecture into a control and data plane allows for efficient lookups of data against the data plane, while still allowing for verification of the data stored therein using the control plane. As a hash of the zone file is stored alongside its name in the Blockchain, a low-level transaction with consensus is necessary to modify the zone file that is associated with a name. Furthermore, if hashes of record contents are put inside the zone file, these contents also become immutable without consensus \cite{ali_blockstack:_2016}.
 
-The Blockstack system architecture also offers possible solutions for several fundamental problems regarding the storage of associated data. The production data is stored outside of the blockchain, which works around the limited amount of storage per block. Additionally, the data that needs to be replicated across participants in the network is limited, as transactions only contain hashed and encoded information \cite{ali_blockstack:_2016}.
+The Blockstack system architecture also offers possible solutions for several fundamental problems regarding the storage of associated data. The production data is stored outside of the Blockchain, which works around the limited amount of storage per block. Additionally, the data that needs to be replicated across participants in the network is limited, as transactions only contain hashed and encoded information \cite{ali_blockstack:_2016}.
 
 \paragraph{Bitforest}
 
 Approaches like Blockstack are possible solutions for the deployment of a fully decentralized PKI system that cannot be controlled or censored by any one entity. However, while this might be advantageous for some cases, organizations that deploy a PKI, even if it is decentralized, more often want to keep some control over their namespace. Without any such means of control, PKI systems are vulnerable to many kinds of abuse. An exemplary kind of abuse is called name squatting and refers to the preemptive reservation of names under the expectation of future profit (e.g., through auctioning off the name) \cite{dong_bitforest:_2018}.
 
-Similarly to the Blockstack architecture, the approach taken by Bitforest is based on a data structure on top of a blockchain. However, Bitforest allows an organization to keep control over who participates in their namespaces. A namespace administrator can define mappings of names to indices in a binary search tree, where for each index, a list of all current and preceding values is stored \cite{dong_bitforest:_2018}.
+Similarly to the Blockstack architecture, the approach taken by Bitforest is based on a data structure on top of a Blockchain. However, Bitforest allows an organization to keep control over who participates in their namespaces. A namespace administrator can define mappings of names to indices in a binary search tree, where for each index, a list of all current and preceding values is stored \cite{dong_bitforest:_2018}.
 
 However, even though an administrator defines the mapping, only the owner of the name can update the associated value by appending to the log of the corresponding name. This maintains the critical property of identity retention, meaning that only the owner and no centralized entity can ever change a value that has been associated with a name \cite{dong_bitforest:_2018}.
 
@@ -72,27 +70,27 @@ When clients need to look up the current value that corresponds to a name, they 
 
 \subsubsection{Web Certifications using Blockchain Technologies}
 
-One of the most important application areas of PKI systems is the certification of the integrity of domains in the world wide web. Through its exposure to a substantial number of people, the web certification system is one of the most widely exposed and has been subject to several critical vulnerabilities and attacks. Recent research tries to prevent some of these attacks by employing a blockchain-based web certification infrastructure that does not need to rely on trusted central entities.
+One of the most important application areas of PKI systems is the certification of the integrity of domains in the world wide web. Through its exposure to a substantial number of people, the web certification system is one of the most widely exposed and has been subject to several critical vulnerabilities and attacks. Recent research tries to prevent some of these attacks by employing a Blockchain-based web certification infrastructure that does not need to rely on trusted central entities.
 
 \paragraph{Ghazal}
 
 In the traditional web certification model, domains and their owners are validated by trusted certification authorities. The most popular means of validation is domain-validation, meaning that only the association between the public key and domain name is certified. This approach suffers from the many critical issues due to indirections as described in \ref{subsubsec:threat_model_pki}.
 
-Ghazal proposes a new uni-authoritative paradigm for web certification and domain infrastructure. Concretely, no single authority should be needed to certify entities or register domains, as the blockchain itself could serve as a sort of authoritative entity. This approach has the potential to solve many of the vulnerabilities occurring due to indirections and centralization in general \cite{zohar_ghazal:_2019}.
+Ghazal proposes a new uni-authoritative paradigm for web certification and domain infrastructure. Concretely, no single authority should be needed to certify entities or register domains, as the Blockchain itself could serve as a sort of authoritative entity. This approach has the potential to solve many of the vulnerabilities occurring due to indirections and centralization in general \cite{zohar_ghazal:_2019}.
 
-The foundation of the Ghazal prototype is built on a smart contract on the Ethereum blockchain. The contract specifies all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates. Upon registration of a domain name in the .ghazal namespace, the owner can assign arbitrary values to the name (including public keys/certificates). Registrations and other operations incur a fee that is paid to a block-hole account on the Ethereum network, meaning that nobody can spend the fee again \cite{zohar_ghazal:_2019}.
+The foundation of the Ghazal prototype is built on a smart contract on the Ethereum Blockchain. The contract specifies all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates. Upon registration of a domain name in the .ghazal namespace, the owner can assign arbitrary values to the name (including public keys/certificates). Registrations and other operations incur a fee that is paid to a block-hole account on the Ethereum network, meaning that nobody can spend the fee again \cite{zohar_ghazal:_2019}.
 
 While a uni-authoritative paradigm could solve some of the issues in today's web certification, browsers and operating systems would need to be extended to support such functionality. For example, to support the current Ghazal proposal, .ghazal domains would need to be recognized, processed, and verified differently from the remainder of sites on the web \cite{zohar_ghazal:_2019}.
 
-It is also still a topic of research if and how a decentralized system could support domain lookups efficiently without the need for storing the entire blockchain on each client device. Furthermore, the approach taken by Ghazal is plagued by new issues that arise through the removal of all central entities. For example, if a domain owner's private key were to be lost, the corresponding name could never be reassigned \cite{zohar_ghazal:_2019}.
+It is also still a topic of research if and how a decentralized system could support domain lookups efficiently without the need for storing the entire Blockchain on each client device. Furthermore, the approach taken by Ghazal is plagued by new issues that arise through the removal of all central entities. For example, if a domain owner's private key were to be lost, the corresponding name could never be reassigned \cite{zohar_ghazal:_2019}.
 
 \paragraph{Certificate Recovation and Transparency}
 
 Certificate Transparency (CT) is a recent improvement to the traditional web certification model. When CT is enforced by a browser (e.g., modern versions of Chrome), the browser only accepts certificates without warning if they have been published to a public append-only log of certificate issuances. This measure has been introduced to counteract the malicious issuance of certificates by hacked CAs or through compulsion or malfeasance \cite{zohar_blockchain-based_2019}.
 
-While CT in traditional web certification can already improve web security significantly, it is only a reactive measure, meaning that fraud can still occur but are probably recognized more quickly. \cite{zohar_blockchain-based_2019} proposes that certificate issuance as well as handling the revocation of certificates could be moved to a blockchain-based system, preventing the issuing of malicious certificates entirely without the approval of the domain owner.
+While CT in traditional web certification can already improve web security significantly, it is only a reactive measure, meaning that fraud can still occur but are probably recognized more quickly. \cite{zohar_blockchain-based_2019} proposes that certificate issuance as well as handling the revocation of certificates could be moved to a Blockchain-based system, preventing the issuing of malicious certificates entirely without the approval of the domain owner.
 
-In the solution proposed in \cite{zohar_blockchain-based_2019}, certificate authorities would not hold the solemn authority over certification. Instead, a certificate would only ever be valid if the associated web server cooperates in their publication by publishing the CA-issued certificate to a public certificate issuance blockchain. Browsers would then only accept certificates that have been both issued by a valid CA and published to the blockchain. By additionally enforcing a short expiration time on certificates, certificates that need to be revoked could just not be renewed, causing the CA to issue a revocation. Similarly to the approach taken in Ghazal, a key challenge of such an approach is that clients need to maintain a copy of the certificate blockchain to verify the integrity of certificates.
+In the solution proposed in \cite{zohar_blockchain-based_2019}, certificate authorities would not hold the solemn authority over certification. Instead, a certificate would only ever be valid if the associated web server cooperates in their publication by publishing the CA-issued certificate to a public certificate issuance Blockchain. Browsers would then only accept certificates that have been both issued by a valid CA and published to the Blockchain. By additionally enforcing a short expiration time on certificates, certificates that need to be revoked could just not be renewed, causing the CA to issue a revocation. Similarly to the approach taken in Ghazal, a key challenge of such an approach is that clients need to maintain a copy of the certificate Blockchain to verify the integrity of certificates.
 
 
 \subsubsection{Keyless Signature Infrastructures and Blockchain}
@@ -103,4 +101,4 @@ The KSI architecture processes incoming signature requests in rounds (e.g., one 
 
 \cite{hutchison_keyless_2013} suggests that the root-hash could be published to broad-reach media like newspapers in monthly iterations. This would allow verification of a document's integrity even without the KSI infrastructure, as one can compute the root-hash and compare it to the one published. However, this approach is inefficient in that it needs manual verification against an external medium and can only be performed with a reasonable publishing frequency \cite{jamthagen_blockchain-based_2016}.
 
-The blockchain-based approach presented in \cite{jamthagen_blockchain-based_2016} improves the efficiency by publishing to the blockchain in an increased frequency such that one can more granularly verify when a document was signed (i.e., added to the tree). Additionally, the break between media is no longer necessary, as signatures can be automatically verified based on the blockchain contents. When publishing to the blockchain, the frequency can be increased to several times per hour, as it is only limited by the throughput of blocks being mined \cite{jamthagen_blockchain-based_2016}.
+The Blockchain-based approach presented in \cite{jamthagen_blockchain-based_2016} improves the efficiency by publishing to the Blockchain in an increased frequency such that one can more granularly verify when a document was signed (i.e., added to the tree). Additionally, the break between media is no longer necessary, as signatures can be automatically verified based on the Blockchain contents. When publishing to the Blockchain, the frequency can be increased to several times per hour, as it is only limited by the throughput of blocks being mined \cite{jamthagen_blockchain-based_2016}.
